<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/foreground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/group1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:text="@string/statistics"
                android:textColor="#0C3D42"
                android:textSize="28sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/group5" />

                <LinearLayout
                    android:layout_marginHorizontal="65dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/best_score"
                            android:textColor="#005F6C"
                            android:textSize="20sp" />

                        <com.bibaspirt.bubblesport.CustomTextView
                            android:id="@+id/tvBestScore"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat"
                            android:gravity="end"
                            android:shadowColor="#005F6C"
                            android:text="-"
                            android:textColor="@color/white"
                            android:textSize="32sp"
                            app:strokeColor="#005F6C"
                            app:strokeJoinStyle="round"
                            app:strokeWidth="2dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/last_game_result"
                            android:textColor="#005F6C"
                            android:textSize="20sp" />

                        <com.bibaspirt.bubblesport.CustomTextView
                            android:id="@+id/tvLastGameResult"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat"
                            android:gravity="end"
                            android:shadowColor="#005F6C"
                            android:text="-"
                            android:textColor="@color/white"
                            android:textSize="32sp"
                            app:strokeColor="#005F6C"
                            app:strokeJoinStyle="round"
                            app:strokeWidth="2dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/games_played"
                            android:textColor="#005F6C"
                            android:textSize="20sp" />

                        <com.bibaspirt.bubblesport.CustomTextView
                            android:id="@+id/tvGamesPlayed"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat"
                            android:gravity="end"
                            android:shadowColor="#005F6C"
                            android:text="-"
                            android:textColor="@color/white"
                            android:textSize="32sp"
                            app:strokeColor="#005F6C"
                            app:strokeJoinStyle="round"
                            app:strokeWidth="2dp" />

                    </LinearLayout>
                </LinearLayout>

            </FrameLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/group2"
            android:padding="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:onClick="returnToMenu"
                android:text="@string/menu"
                android:textColor="#0C3D42"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>