<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.plink6746.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/app_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/juvanze"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:text="Plink"
            android:textColor="#F1A007"
            android:textSize="100sp" />

        <FrameLayout
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="#4B5A5A5A"
            android:padding="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/juvanze"
                android:gravity="center"
                android:onClick="startGame"
                android:text="@string/start"
                android:textColor="#F1A007"
                android:textSize="40sp" />

        </FrameLayout>

        <!--  <FrameLayout
              android:id="@+id/btnAchievements"
              android:layout_width="match_parent"
              android:layout_height="75dp"
              android:layout_marginHorizontal="20dp"
              android:layout_marginTop="20dp"
              android:background="#4B5A5A5A"
              android:padding="4dp"
              android:paddingBottom="4dp">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="?attr/selectableItemBackground"
                  android:clickable="true"
                  android:focusable="true"
                  android:fontFamily="@font/juvanze"
                  android:gravity="center"
                  android:onClick="viewAchievements"
                  android:text="@string/achievements"
                  android:textColor="#F1A007"
                  android:textSize="40sp" />
          </FrameLayout>-->

        <FrameLayout
            android:id="@+id/btnStatistics"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="#4B5A5A5A"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/juvanze"
                android:gravity="center"
                android:onClick="viewStatistics"
                android:text="@string/statistics"
                android:textColor="#F1A007"
                android:textSize="40sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="#4B5A5A5A"
            android:padding="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/juvanze"
                android:gravity="center"
                android:onClick="viewSettings"
                android:text="@string/settings"
                android:textColor="#F1A007"
                android:textSize="40sp" />
        </FrameLayout>

        <RadioGroup
            android:id="@+id/difficultyGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/easyRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#835B10"
                android:checked="true"
                android:fontFamily="@font/juvanze"
                android:text="Easy"
                android:textColor="#835B10"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/mediumRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#835B10"
                android:fontFamily="@font/juvanze"
                android:text="Medium"
                android:textColor="#835B10"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/hardRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#835B10"
                android:fontFamily="@font/juvanze"
                android:text="Hard"
                android:textColor="#835B10"
                android:textSize="24sp" />
        </RadioGroup>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>